// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PromsCreateForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="promsCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="name"
            label="Name of PROM"
            name="name"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="records"
        name="records"
        props={
          Object {
            "isNotDragAndDropOfRaws": true,
            "isOnlyOneRecord": true,
            "isSubmit": true,
            "match": undefined,
            "typesOptions": Array [
              Object {
                "title": "Procedures",
                "value": "procedures",
              },
            ],
          }
        }
      />
      <FormTitle
        text="Specific Question"
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="specific_q1"
            label="1. In general, would you say your health is:"
            name="specific_q1"
            options={
              Array [
                Object {
                  "title": "Excellent",
                  "value": "at0009",
                },
                Object {
                  "title": "Very good",
                  "value": "at0010",
                },
                Object {
                  "title": "Good",
                  "value": "at0011",
                },
                Object {
                  "title": "Fair",
                  "value": "at0012",
                },
                Object {
                  "title": "Poor",
                  "value": "at0013",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="specific_q2"
            label="2. Compared to one year ago, how would you rate your health in general now?"
            name="specific_q2"
            options={
              Array [
                Object {
                  "title": "Much better",
                  "value": "at0015",
                },
                Object {
                  "title": "Somewhat better",
                  "value": "at0016",
                },
                Object {
                  "title": "About the same",
                  "value": "at0017",
                },
                Object {
                  "title": "Somewhat worse",
                  "value": "at0018",
                },
                Object {
                  "title": "Much worse",
                  "value": "at0019",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="specific_q3"
            label="3. Does your health now limit you in vigorous activities?"
            name="specific_q3"
            options={
              Array [
                Object {
                  "title": "Yes, limited a lot",
                  "value": "at0021",
                },
                Object {
                  "title": "Yes, limited a little",
                  "value": "at0022",
                },
                Object {
                  "title": "No, not limited at all",
                  "value": "at0023",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="specific_q4"
            label="4. Does your health now limit you in moderate activities?"
            name="specific_q4"
            options={
              Array [
                Object {
                  "title": "Yes, limited a lot",
                  "value": "at0025",
                },
                Object {
                  "title": "Yes, limited a little",
                  "value": "at0026",
                },
                Object {
                  "title": "No, not limited at all",
                  "value": "at0027",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <Field
          component={[Function]}
          id="specific_q5"
          label="5. Does your health now limit you in lifting or carrying groceries?"
          name="specific_q5"
          options={
            Array [
              Object {
                "title": "Yes, limited a lot",
                "value": "at0030",
              },
              Object {
                "title": "Yes, limited a little",
                "value": "at0031",
              },
              Object {
                "title": "No, not limited at all",
                "value": "at0032",
              },
            ]
          }
          placeholder="-- Select --"
          props={
            Object {
              "isSubmit": true,
            }
          }
        />
      </div>
      <FormTitle
        text="General Score"
      />
      <div
        className="form-group"
      >
        <div>
          Pain severity on a scale of 0 to 100, where 0 indicates no pain and 100 indicates severe pain.
        </div>
        <div
          className="rc-slider--undefined"
        >
          <div
            className="rc-slider-indent"
          >
            <Field
              component={[Function]}
              name="score"
              props={
                Object {
                  "defaultValue": 0,
                  "marks": Object {
                    "0": "0",
                    "10": "10",
                    "100": "100",
                    "20": "20",
                    "30": "30",
                    "40": "40",
                    "50": "50",
                    "60": "60",
                    "70": "70",
                    "80": "80",
                    "90": "90",
                  },
                  "max": 100,
                  "min": 0,
                  "onChange": [Function],
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": true,
                "value": "01-Jan-2018",
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <PromsCreateForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="promsCreateForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="name"
            label="Name of PROM"
            name="name"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <Field
        component={[Function]}
        id="records"
        name="records"
        props={
          Object {
            "isNotDragAndDropOfRaws": true,
            "isOnlyOneRecord": true,
            "isSubmit": false,
            "match": undefined,
            "typesOptions": Array [
              Object {
                "title": "Procedures",
                "value": "procedures",
              },
            ],
          }
        }
      />
      <FormTitle
        text="Specific Question"
      />
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="specific_q1"
            label="1. In general, would you say your health is:"
            name="specific_q1"
            options={
              Array [
                Object {
                  "title": "Excellent",
                  "value": "at0009",
                },
                Object {
                  "title": "Very good",
                  "value": "at0010",
                },
                Object {
                  "title": "Good",
                  "value": "at0011",
                },
                Object {
                  "title": "Fair",
                  "value": "at0012",
                },
                Object {
                  "title": "Poor",
                  "value": "at0013",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="specific_q2"
            label="2. Compared to one year ago, how would you rate your health in general now?"
            name="specific_q2"
            options={
              Array [
                Object {
                  "title": "Much better",
                  "value": "at0015",
                },
                Object {
                  "title": "Somewhat better",
                  "value": "at0016",
                },
                Object {
                  "title": "About the same",
                  "value": "at0017",
                },
                Object {
                  "title": "Somewhat worse",
                  "value": "at0018",
                },
                Object {
                  "title": "Much worse",
                  "value": "at0019",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="specific_q3"
            label="3. Does your health now limit you in vigorous activities?"
            name="specific_q3"
            options={
              Array [
                Object {
                  "title": "Yes, limited a lot",
                  "value": "at0021",
                },
                Object {
                  "title": "Yes, limited a little",
                  "value": "at0022",
                },
                Object {
                  "title": "No, not limited at all",
                  "value": "at0023",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="specific_q4"
            label="4. Does your health now limit you in moderate activities?"
            name="specific_q4"
            options={
              Array [
                Object {
                  "title": "Yes, limited a lot",
                  "value": "at0025",
                },
                Object {
                  "title": "Yes, limited a little",
                  "value": "at0026",
                },
                Object {
                  "title": "No, not limited at all",
                  "value": "at0027",
                },
              ]
            }
            placeholder="-- Select --"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <Field
          component={[Function]}
          id="specific_q5"
          label="5. Does your health now limit you in lifting or carrying groceries?"
          name="specific_q5"
          options={
            Array [
              Object {
                "title": "Yes, limited a lot",
                "value": "at0030",
              },
              Object {
                "title": "Yes, limited a little",
                "value": "at0031",
              },
              Object {
                "title": "No, not limited at all",
                "value": "at0032",
              },
            ]
          }
          placeholder="-- Select --"
          props={
            Object {
              "isSubmit": false,
            }
          }
        />
      </div>
      <FormTitle
        text="General Score"
      />
      <div
        className="form-group"
      >
        <div>
          Pain severity on a scale of 0 to 100, where 0 indicates no pain and 100 indicates severe pain.
        </div>
        <div
          className="rc-slider--undefined"
        >
          <div
            className="rc-slider-indent"
          >
            <Field
              component={[Function]}
              name="score"
              props={
                Object {
                  "defaultValue": 0,
                  "marks": Object {
                    "0": "0",
                    "10": "10",
                    "100": "100",
                    "20": "20",
                    "30": "30",
                    "40": "40",
                    "50": "50",
                    "60": "60",
                    "70": "70",
                    "80": "80",
                    "90": "90",
                  },
                  "max": 100,
                  "min": 0,
                  "onChange": [Function],
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="dateCreated"
            label="Date"
            name="dateCreated"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "isSubmit": false,
                "value": "01-Jan-2018",
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
